; ModuleID = '/home/carl/AnghaBench/git/extr_read-cache.c_should_delete_shared_index.c'
source_filename = "/home/carl/AnghaBench/git/extr_read-cache.c_should_delete_shared_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i64 }

@.str = private unnamed_addr constant [20 x i8] c"could not stat '%s'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @should_delete_shared_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @should_delete_shared_index(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.stat, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %6 = call i64 (...) @get_shared_index_expire_date()
  store i64 %6, i64* %5, align 8
  %7 = load i64, i64* %5, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %25

10:                                               ; preds = %1
  %11 = load i8*, i8** %3, align 8
  %12 = call i64 @stat(i8* %11, %struct.stat* %4)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %10
  %15 = call i32 @_(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 @error_errno(i32 %15, i8* %16)
  store i32 %17, i32* %2, align 4
  br label %25

18:                                               ; preds = %10
  %19 = getelementptr inbounds %struct.stat, %struct.stat* %4, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* %5, align 8
  %22 = icmp ugt i64 %20, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %18
  store i32 0, i32* %2, align 4
  br label %25

24:                                               ; preds = %18
  store i32 1, i32* %2, align 4
  br label %25

25:                                               ; preds = %24, %23, %14, %9
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i64 @get_shared_index_expire_date(...) #1

declare dso_local i64 @stat(i8*, %struct.stat*) #1

declare dso_local i32 @error_errno(i32, i8*) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
